# rust-log-correlation-issue

./: Cargo.toml  README.md  call_service.sh  start-jaeger.sh
src/: api.rs  main.rs
