[package]
name = "rust-log-correlation-issue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.5.0" }
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"]}
tower = "0.4.12"
tower-http = { version = "0.3", features = ["compression-full", "trace"] }
tracing = "0.1"
tracing-opentelemetry = "0.17.2"
tracing-subscriber =  { version = "0.3", features = ["env-filter", "registry", "fmt", "json", "time"] }
uuid = { version = "1.0", features = ["serde", "v4"] }